--- a/src/app/features/game-board/components/dice-roller/dice-roller.component.scss
+++ b/src/app/features/game-board/components/dice-roller/dice-roller.component.scss
@@ -32,6 +32,7 @@
     border: 2px dashed #ccc;
     border-radius: 8px;
     display: flex;
+    box-sizing: border-box;
     align-items: center;
     justify-content: center;
     font-size: 48px;
@@ -111,6 +112,7 @@
     opacity: 0;
     transform: scale(0.95);
   }
+
   to {
     opacity: 1;
     transform: scale(1);
