--- a/src/app/shared/components/die/die.component.scss
+++ b/src/app/shared/components/die/die.component.scss
@@ -5,6 +5,7 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   display: inline-block;
   user-select: none;
+  box-sizing: border-box;
 
   &--small {
     width: 40px;
@@ -73,15 +74,19 @@
   0% {
     transform: rotate(0deg) scale(1);
   }
+
   25% {
     transform: rotate(90deg) scale(1.1);
   }
+
   50% {
     transform: rotate(180deg) scale(1);
   }
+
   75% {
     transform: rotate(270deg) scale(1.1);
   }
+
   100% {
     transform: rotate(360deg) scale(1);
   }
